Routing para el sprint terminado, tipos de disponibilidad y contratos ctrl y df terminados

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -76,8 +76,7 @@
     <!--#region JS de la Aplicacion-->
     <!--#region Modulo-->
     <script src="App/vLaboralApp.js"></script>
-    <script src="libs/angular/oclazyload/dist/ocLazyLoad.min.js"></script>
-    <script src="scripts/app.ctrl.js"></script>
+    <script src="libs/angular/oclazyload/dist/ocLazyLoad.min.js"></script>    
     <!--#endregion-->
 
     <!--#region Seguridad-->
@@ -89,6 +88,7 @@
 
     <!--#region DataFactorys-->
     <script src="App/TiposDisponibilidad/tiposDisponibilidadDF.js"></script>
+    <script src="App/TiposContrato/tiposContratoDF.js"></script>
     <!--#endregion-->
 
     <!-- #region Services -->
