--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -5,7 +5,10 @@
     <title>vLaboralWeb</title>
     <meta name="description" content="material, material design, angular material, app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    
+    <!-- #region Ezequiel: mis CSS-->
+    <link href="styles/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="fonts/style.css">
+    <!-- #endregion-->
     <!--#region Iafar: Inicio de JS de 3ros-->
     <!--#region Declaracion JS AngularJS-->
     <script src="libs/angular/angular/1.5.0/angular.js"></script>
