armado de ofertas con puestos

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -5,6 +5,11 @@
     <title>vLaboralWeb</title>
     <meta name="description" content="material, material design, angular material, app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    
+    <!--#region iconos de font awesome-->    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!--#endregion-->
+    
     <!-- #region Ezequiel: mis CSS-->
     <link href="styles/styles.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="fonts/style.css">
@@ -100,17 +105,11 @@
     <script src="App/Rubros/rubrosDF.js"></script>
     <script src="App/TiposContrato/tiposContratoDF.js"></script>
     <script src="App/TiposDisponibilidad/tiposDisponibilidadDF.js"></script>
+    <script src="App/Puestos/puestosDf.js"></script>
     <!--#endregion-->
-    <!--#region Controllers propios-->
-    <script src="App/Empresas/empresasCtrl.js"></script>
-    <script src="App/Habilidades/habilidadesCtrl.js"></script>
-    <script src="App/Ofertas/ofertasCtrl.js"></script>
-    <script src="App/Profesionales/profesionalesCtrl.js"></script>
-    <script src="App/Requisitos/requisitosCtrl.js"></script>
-    <script src="App/Rubros/rubrosCtrl.js"></script>
-    <script src="App/TiposContrato/tiposContratoCtrl.js"></script>
-    <script src="App/TiposDisponibilidad/tiposDisponibilidadCtrl.js"></script>
-    <!--#endregion-->
+
+    <script src="App/Puestos/puestosCtrl.js"></script>
+
     <!-- #region Services -->
     <script src="App/Configuraciones/configSvc.js"></script>
     <!-- #endregion -->
