Profesional: Traer listado de ofertas paginado.

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -58,6 +58,9 @@
     <script src="libs/angular/angular-ui-router-extras/ct-ui-router-extras.js"></script>
     <script src="libs/angular/angular-ui-utils/ui-utils.js"></script>
     <!-- #endregion -->
+    <!-- #region Pagination -->
+    <script src="libs/angular/angular-utils-pagination/dirPagination.js"></script>
+    <!-- #endregion -->
     <!--#region ngTable  -->
     <link href="libs/angular/ngTable/ng-table.css" rel="stylesheet" />
     <script src="libs/angular/ngTable/ng-table.js"></script>
