alta de etapas al cargar una nueva oferta, cambios en los form de registro, y librerias nueva para el timeline de etapas y filtros complejos de angular

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -86,6 +86,22 @@
     <link href="libs/angular/ngGallery/ngGallery.css" rel="stylesheet" />
     <script src="libs/angular/ngGallery/ngGallery.js"></script>
     <!--#endregion-->
+    <!--#region mdDataTable-->
+    <link href="libs/angular/mdDataTable/md-data-table-style.css" rel="stylesheet" />
+    <script src="libs/angular/mdDataTable/md-data-table-templates.js"></script>
+    <script src="libs/angular/mdDataTable/md-data-table.js"></script>    
+    <!--#endregion-->
+
+    <!--#region angular-timeline-->
+    <!--<link href="libs/angular/angular-timeline/angular-timeline-animations.css" rel="stylesheet" />
+    <link href="libs/angular/angular-timeline/angular-timeline-bootstrap.css" rel="stylesheet" />-->
+    <link href="libs/angular/angular-timeline/angular-timeline.css" rel="stylesheet" />
+    <script src="libs/angular/angular-timeline/angular-timeline.js"></script>
+    <!--#endregion-->
+
+    <!--#region angular-filter-->
+    <script src="libs/angular/angular-filter/angular-filter.js"></script>
+    <!--#endregion-->
     <!--#endregion-->
    
     <!--#region JS de la Aplicacion-->
@@ -114,9 +130,12 @@
     <script src="App/TiposContrato/tiposContratoDF.js"></script>
     <script src="App/TiposDisponibilidad/tiposDisponibilidadDF.js"></script>
     <script src="App/Puestos/puestosDf.js"></script>
+    <script src="App/TiposEtapasOferta/tiposEtapasDF.js"></script>
+    <script src="App/EtapasOferta/etapasOfertaDF.js"></script>
     <!--#endregion-->
 
     <script src="App/Puestos/puestosCtrl.js"></script>
+    <script src="App/EtapasOferta/etapasOfertaCtrl.js"></script>
 
     <!-- #region Services -->
     <script src="App/Configuraciones/configSvc.js"></script>
