Perfil profesional actualizado (tabla de identificaciones y chips de habilidades)
index actualizado con referencias a componente mdTable
archivos actualizados de mdTable
archivos svg añadidos

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -87,9 +87,15 @@
     <script src="libs/angular/ngGallery/ngGallery.js"></script>
     <!--#endregion-->
     <!--#region mdDataTable-->
-    <link href="libs/angular/mdDataTable/md-data-table-style.css" rel="stylesheet" />
+    <!--<link href="libs/angular/mdDataTable/md-data-table-style.css" rel="stylesheet" />
     <script src="libs/angular/mdDataTable/md-data-table-templates.js"></script>
-    <script src="libs/angular/mdDataTable/md-data-table.js"></script>    
+    <script src="libs/angular/mdDataTable/md-data-table.js"></script>-->    
+    <!--#endregion-->
+    <!--#region mdTable-->
+    <link href="libs/angular/mdTable/md-data-table.css" rel="stylesheet" />
+    <link href="libs/angular/mdTable/md-data-table.min.css" rel="stylesheet" />
+    <script src="libs/angular/mdTable/md-data-table.js"></script>
+    <script src="libs/angular/mdTable/md-data-table.min.js"></script>
     <!--#endregion-->
 
     <!--#region angular-timeline-->
