--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -139,6 +139,9 @@
     <script src="App/TiposEtapasOferta/tiposEtapasDF.js"></script>
     <script src="App/EtapasOferta/etapasOfertaDF.js"></script>    
     <script src="App/Postulantes/postulantesDF.js"></script>
+    <script src="App/ExperienciasLaborales/experienciasLaboralesDF.js"></script>
+    <script src="App/FormacionesAcademicas/formacionesAcademicasDF.js"></script>
+    <script src="App/Idiomas/IdiomasDF.js"></script>
     <!--#endregion-->
 
     <!-- #region Services -->
