agrego controllers, data factorys y funcionalidad para alta de experiencia, idioma, cursos y estudios del profesional

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -139,9 +139,11 @@
     <script src="App/TiposEtapasOferta/tiposEtapasDF.js"></script>
     <script src="App/EtapasOferta/etapasOfertaDF.js"></script>    
     <script src="App/Postulantes/postulantesDF.js"></script>
-    <script src="App/ExperienciasLaborales/experienciasLaboralesDF.js"></script>
-    <script src="App/FormacionesAcademicas/formacionesAcademicasDF.js"></script>
+    <script src="App/ExperienciasLaborales/experienciasLaboralesDF.js"></script>    
     <script src="App/Idiomas/IdiomasDF.js"></script>
+    <script src="App/Cursos/cursosDF.js"></script>
+    <script src="App/Educacion/educacionDF.js"></script>
+    <script src="App/TiposNivelesEstudio/tiposNivEstudioDF.js"></script>
     <!--#endregion-->
 
     <!-- #region Services -->
