--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -144,6 +144,7 @@
     <script src="App/Cursos/cursosDF.js"></script>
     <script src="App/Educacion/educacionDF.js"></script>
     <script src="App/TiposNivelesEstudio/tiposNivEstudioDF.js"></script>
+    <script src="App/Notificaciones/notificacionesDF.js"></script>
     <!--#endregion-->
 
     <!-- #region Services -->
