--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -108,6 +108,9 @@
     <!--#region angular-filter-->
     <script src="libs/angular/angular-filter/angular-filter.js"></script>
     <!--#endregion-->
+    <!--#region signalR-->
+    <script src="libs/jquery/bower-signalr-master/jquery.signalR.min.js"></script>
+    <!--#endregion-->
     <!--#endregion-->
    
     <!--#region JS de la Aplicacion-->
@@ -149,6 +152,7 @@
 
     <!-- #region Services -->
     <script src="App/Configuraciones/configSvc.js"></script>
+    <script src="App/Configuraciones/hubProxySvc.js"></script>
     <!-- #endregion -->
 
     <!--#region directivas Template-->
