--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -108,8 +108,13 @@
     <!--#region angular-filter-->
     <script src="libs/angular/angular-filter/angular-filter.js"></script>
     <!--#endregion-->
+
+    <script src="scripts/jquery.signalR-2.2.0.js"></script>
+    <script src="scripts/angular-signalr-hub.js"></script>
+
     <!--#endregion-->
-   
+
+    
     <!--#region JS de la Aplicacion-->
     <!--#region Modulo-->
     <script src="App/vLaboralApp.js"></script>
@@ -149,6 +154,7 @@
 
     <!-- #region Services -->
     <script src="App/Configuraciones/configSvc.js"></script>
+    <script src="App/Notificaciones/notificacionesSvc.js"></script>
     <!-- #endregion -->
 
     <!--#region directivas Template-->
