--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -109,8 +109,15 @@
     <script src="libs/angular/angular-filter/angular-filter.js"></script>
     <!--#endregion-->
 
+    <!--#region Clientes SignalR-->
     <script src="scripts/jquery.signalR-2.2.0.js"></script>
     <script src="scripts/angular-signalr-hub.js"></script>
+    <!--"endregion-->
+
+    <!--#region angular-notification-icons-->
+    <link href="libs/angular/angular-notification-icons/angular-notification-icons.css" rel="stylesheet" />
+    <script src="libs/angular/angular-notification-icons/angular-notification-icons.js"></script>
+    <!--#endregion-->
 
     <!--#endregion-->
 
