agrego funciones para enviar notificaciones de nuevas experiencia cargadas por el profesional y modifico el modal de nueva experiencia agregando ngAutocomplete para la ubicacion

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -53,7 +53,7 @@
     <!-- #endregion -->   
     <!--#region ngAutocomplete/Google Places-->
     <script src="libs/angular/ngAutocomplete/ngAutocomplete.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrOYFqlKvTKRKc24RUVBiVYqpB-l2E86E&libraries=places"></script>    
     <!-- #endregion  -->
     <!--#region Angular Jwt-->
     <script src="libs/angular/angular-jwt/angular-jwt.js"></script>
