--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -30,6 +30,9 @@
     <script src="libs/angular/angular-touch/1.5.0/angular-touch.js"></script>
     <!--#endregion-->
     <!--#region Angular Material -->
+    <!--<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>-->
+
     <link href="libs/angular/angular-material/1.0.6/angular-material.css" rel="stylesheet" />
     <script src="libs/angular/angular-material/1.0.6/angular-material.js"></script>
     <!--#endregion -->
