--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="fonts/style.css">
 
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/smoothscroll.js"></script>
+    <!--<script type="text/javascript" src="js/smoothscroll.js"></script>-->
     <!-- #endregion-->
     <!--#region Iafar: Inicio de JS de 3ros-->
     <!--#region Declaracion JS AngularJS-->
