agrego funcionalidad nueva para el centro de notificaciones y correcciones varias en la carga de ofertas

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -156,6 +156,7 @@
     <script src="App/Educacion/educacionDF.js"></script>
     <script src="App/TiposNivelesEstudio/tiposNivEstudioDF.js"></script>
     <script src="App/Notificaciones/notificacionesDF.js"></script>
+    <script src="App/TiposNotificaciones/tiposNotificacionesDF.js"></script>
     <!--#endregion-->
     <!-- #region Services -->
     <script src="App/Configuraciones/configSvc.js"></script>
