--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -157,6 +157,7 @@
     <script src="App/TiposNivelesEstudio/tiposNivEstudioDF.js"></script>
     <script src="App/Notificaciones/notificacionesDF.js"></script>
     <script src="App/TiposNotificaciones/tiposNotificacionesDF.js"></script>
+    <script src="App/Empleados/empleadosDF.js"></script>
     <!--#endregion-->
     <!-- #region Services -->
     <script src="App/Configuraciones/configSvc.js"></script>
