--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <!--<script type="text/javascript" src="js/smoothscroll.js"></script>-->
     <!-- #endregion-->
+    
     <!--#region Iafar: Inicio de JS de 3ros-->
     <!--#region Declaracion JS AngularJS-->
     <script src="libs/angular/angular/1.5.0/angular.js"></script>
@@ -157,6 +158,8 @@
     <script src="App/TiposNivelesEstudio/tiposNivEstudioDF.js"></script>
     <script src="App/Notificaciones/notificacionesDF.js"></script>
     <script src="App/TiposNotificaciones/tiposNotificacionesDF.js"></script>
+    <script src="App/Empleados/empleadosDF.js"></script>
+
     <!--#endregion-->
     <!-- #region Services -->
     <script src="App/Configuraciones/configSvc.js"></script>
