--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -90,6 +90,9 @@
     <link href="libs/angular/ngGallery/ngGallery.css" rel="stylesheet" />
     <script src="libs/angular/ngGallery/ngGallery.js"></script>
     <!--#endregion-->
+    <!--#region File Saver-->
+    <script src="FileSaver/FileSaver.js"></script>
+    <!--#endregion-->
     <!--#region mdTable-->
     <link href="libs/angular/mdTable/md-data-table.css" rel="stylesheet" />
     <link href="libs/angular/mdTable/md-data-table.min.css" rel="stylesheet" />
@@ -159,6 +162,7 @@
     <script src="App/Notificaciones/notificacionesDF.js"></script>
     <script src="App/TiposNotificaciones/tiposNotificacionesDF.js"></script>
     <script src="App/Empleados/empleadosDF.js"></script>
+    <script src="App/Blobs/blobsDataFactory.js"></script>
 
     <!--#endregion-->
     <!-- #region Services -->
