agrego funciones para resetear y cambiar contraseñas, estan las vistas falta agregarle colorcitos

--- a/VLaboralWeb/index.html
+++ b/VLaboralWeb/index.html
@@ -92,6 +92,10 @@
     <!--#endregion-->
     <!--#region File Saver-->
     <script src="FileSaver/FileSaver.js"></script>
+    <script src="FileSaver/FileSaver.min.js"></script>
+    <!--#endregion-->
+    <!--#region Blob-->
+    <script src="Blob/Blob.js"></script>
     <!--#endregion-->
     <!--#region mdTable-->
     <link href="libs/angular/mdTable/md-data-table.css" rel="stylesheet" />
